updated all images in all pages to webp

--- a/src/assets/css/src/docs.css
+++ b/src/assets/css/src/docs.css
@@ -1630,3 +1630,13 @@ h1[id] {
     content: "" !important;
   }
 }
+
+/* styles for pageload improvements */
+.carousel-inner>.item>a img,
+.carousel-inner>.item img,
+.img-responsive, .thumbnail a img,
+.thumbnail img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
